--- a/PySpark.ipynb
+++ b/PySpark.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMI4rNEVEdcsnrn9a1TI7PC",
+      "authorship_tag": "ABX9TyM9Ir0WC2F1Xl5w8zGJyewL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "2izjBzysb_uy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d89b42af-f8f5-4cc0-b3a7-085948511a17"
+        "outputId": "73e2c219-500e-4360-ca8d-a7f36f7646dd"
       },
       "outputs": [
         {
@@ -68,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jZKYXVy8pl7V",
-        "outputId": "04d39f5a-2ced-491a-9cc4-11ca2081f553"
+        "outputId": "a3f912ea-4618-419f-e03a-782a20496ac0"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,15 +102,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TEed3Wt_qK1g",
-        "outputId": "654748af-375d-4c76-8395-917f2e1f5dd4"
+        "outputId": "322e7822-777a-42f6-8dd1-5d6f1cf03ebe"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Linux 098be2d284f5 6.1.123+ #1 SMP PREEMPT_DYNAMIC Sun Mar 30 16:01:29 UTC 2025 x86_64 x86_64 x86_64 GNU/Linux\n"
+            "Linux bcce0d5f3498 6.1.123+ #1 SMP PREEMPT_DYNAMIC Sun Mar 30 16:01:29 UTC 2025 x86_64 x86_64 x86_64 GNU/Linux\n"
           ]
         }
       ]
@@ -131,12 +131,12 @@
       ],
       "metadata": {
         "id": "DiQfPCNRuJbt",
-        "outputId": "416276dd-74a1-44f4-e422-a7d8a715bcfa",
+        "outputId": "5576001b-22cb-48be-9246-e66b64f21c39",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "BzryJA7xuPSd"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "sEtcIcp3uqgd"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "TiigkhSfu8BI"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -190,12 +190,12 @@
       ],
       "metadata": {
         "id": "T6KbhEzOvcBC",
-        "outputId": "eaf8195b-f23e-4019-b1c8-14771fb5ab31",
+        "outputId": "e0d22dfb-b3f0-4346-f737-67eda938f693",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,9 +239,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xwBrt3oUwydZ",
-        "outputId": "4e21a8d0-6d50-4e3d-9454-e3bb08c45499"
+        "outputId": "c74340eb-3719-4950-ade0-2a419071a435"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,9 +272,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lhx_lCd_xdfS",
-        "outputId": "deea3db6-5f41-4020-b673-2d516ca27f76"
+        "outputId": "1f009e22-080e-480c-a2ea-6b19f04aa1cb"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d8ZdrgWuyMao",
-        "outputId": "51f3e9c2-eb50-45f1-a517-7e453659de4e"
+        "outputId": "fea428d8-1af1-49be-c70b-5da846136533"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,12 +333,12 @@
       ],
       "metadata": {
         "id": "Efaol6iDy5om",
-        "outputId": "07222973-029e-4c23-bf61-ba50f4ba2618",
+        "outputId": "0a4b33ba-badb-4d7c-f25d-fd4d35ea22cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,12 +366,12 @@
       ],
       "metadata": {
         "id": "zkb5fpnS0qNb",
-        "outputId": "e53c00d8-cc90-4b4b-d2cf-838945d0a1be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0fb62409-ad1b-40c1-ebc7-47a6bce114b4"
       },
-      "execution_count": 24,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,13 +401,13 @@
         "df_lower.show()\n"
       ],
       "metadata": {
-        "id": "HZJ2lsJA2jST",
-        "outputId": "22e37799-bdf7-45f8-b371-77721272fa46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HZJ2lsJA2jST",
+        "outputId": "a46b9704-949b-4686-9eab-649529e59ba3"
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,19 +445,18 @@
         "df_concat.show()"
       ],
       "metadata": {
-        "id": "jzsyI9oB25WF",
-        "outputId": "cdc97dd2-50e5-43d2-d1d4-67d25da08bea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jzsyI9oB25WF",
+        "outputId": "8067234b-c2d7-4ca8-9ba9-21512563c9b9"
       },
-      "execution_count": 22,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Column<'Name'>\n",
             "+-----+----------+------+---------------+\n",
             "| Name|Department|Salary|Name_Department|\n",
             "+-----+----------+------+---------------+\n",
@@ -479,13 +478,13 @@
         "df_lenth.show()"
       ],
       "metadata": {
-        "id": "CNTUn2wu3O7m",
-        "outputId": "945c5de7-c1bb-4d6c-c6db-c96ccd0318e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CNTUn2wu3O7m",
+        "outputId": "361e0b0e-598f-4745-ad77-18b52911e2a7"
       },
-      "execution_count": 26,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,13 +513,13 @@
         "df_conditional.show()"
       ],
       "metadata": {
-        "id": "XxfZ5zwr4SVt",
-        "outputId": "d261a12e-05bb-4e54-aee1-fee8774c867a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XxfZ5zwr4SVt",
+        "outputId": "c61a3b2b-f244-4a9e-92e2-0a2942ee11ca"
       },
-      "execution_count": 29,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,13 +546,13 @@
         "df_renamed.show()"
       ],
       "metadata": {
-        "id": "1uchOuhf5AjS",
-        "outputId": "1b758c8c-732b-4fcb-c634-9c9fbec2a25a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1uchOuhf5AjS",
+        "outputId": "3d8e2736-8a6b-436c-ed55-e537ad9d87d1"
       },
-      "execution_count": 31,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,6 +577,381 @@
       "source": [],
       "metadata": {
         "id": "z4I3Eyhf6WWW"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Advanced Transformations"
+      ],
+      "metadata": {
+        "id": "uI93epZiN6UX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql import SparkSession\n",
+        "spark =SparkSession.builder.appName(\"Basics\").getOrCreate()\n",
+        "columns = [\"Name\",\"Department\",\"Salary\"]\n",
+        "data = [\n",
+        "    (\"John\", \"Sales\", 3000),\n",
+        "    (\"Jane\", \"Finance\", 4000),\n",
+        "    (\"Mike\", \"Sales\", 3500),\n",
+        "    (\"Alice\", \"Finance\", 3800),\n",
+        "    (\"Bob\", \"IT\", 4500)\n",
+        "]\n",
+        "\n",
+        "df = spark.createDataFrame(data, columns)\n",
+        "\n",
+        "df.show()"
+      ],
+      "metadata": {
+        "id": "ihrRYzU2OIE-",
+        "outputId": "05be1c20-ac17-4b51-be4d-a780e595ee66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------+------+\n",
+            "| Name|Department|Salary|\n",
+            "+-----+----------+------+\n",
+            "| John|     Sales|  3000|\n",
+            "| Jane|   Finance|  4000|\n",
+            "| Mike|     Sales|  3500|\n",
+            "|Alice|   Finance|  3800|\n",
+            "|  Bob|        IT|  4500|\n",
+            "+-----+----------+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Count by Department\n",
+        "df_count =  df.groupBy(\"Department\").count()\n",
+        "df_count.show()"
+      ],
+      "metadata": {
+        "id": "Al23S6P2Oy-4",
+        "outputId": "f2527bf4-275a-4051-9b79-7cc81f30f257",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-----+\n",
+            "|Department|count|\n",
+            "+----------+-----+\n",
+            "|     Sales|    2|\n",
+            "|   Finance|    2|\n",
+            "|        IT|    1|\n",
+            "+----------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Group by Department and calculate average salary\n",
+        "df.groupBy(\"Department\").avg(\"Salary\").show()"
+      ],
+      "metadata": {
+        "id": "8nqqldByO9Vc",
+        "outputId": "1e749dea-7bca-44b5-ac1d-d494bd239688",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-----------+\n",
+            "|Department|avg(Salary)|\n",
+            "+----------+-----------+\n",
+            "|     Sales|     3250.0|\n",
+            "|   Finance|     3900.0|\n",
+            "|        IT|     4500.0|\n",
+            "+----------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Group by Department and calculate multiple aggregations\n",
+        "df.groupBy(\"Department\").agg({\"Salary\": \"sum\", \"Salary\": \"max\",\"Salary\":'min'}).show()"
+      ],
+      "metadata": {
+        "id": "K9zrSgbqPNdT",
+        "outputId": "b6b44557-c144-45c8-ef1a-f449e5228dc0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-----------+\n",
+            "|Department|min(Salary)|\n",
+            "+----------+-----------+\n",
+            "|     Sales|       3000|\n",
+            "|   Finance|       3800|\n",
+            "|        IT|       4500|\n",
+            "+----------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql import functions as f\n",
+        "df.groupBy('Department').agg(f.avg('Salary'),f.max('Salary'),f.min('Salary')).show()"
+      ],
+      "metadata": {
+        "id": "Y-8AhY-6Pyx5",
+        "outputId": "99a2e284-a8e7-4424-e547-33a9e129644d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-----------+-----------+-----------+\n",
+            "|Department|avg(Salary)|max(Salary)|min(Salary)|\n",
+            "+----------+-----------+-----------+-----------+\n",
+            "|     Sales|     3250.0|       3500|       3000|\n",
+            "|   Finance|     3900.0|       4000|       3800|\n",
+            "|        IT|     4500.0|       4500|       4500|\n",
+            "+----------+-----------+-----------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create another DataFrame for department info\n",
+        "dept_data = [\n",
+        "    (\"Sales\", \"Building A\"),\n",
+        "    (\"Finance\", \"Building B\"),\n",
+        "    (\"IT\", \"Building C\")\n",
+        "]\n",
+        "dept_columns = [\"Department\", \"Location\"]\n"
+      ],
+      "metadata": {
+        "id": "VRwJvXRTQUDg"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dept_df = spark.createDataFrame(dept_data, dept_columns)\n",
+        "joined_df = df.join(dept_df, on='Department', how='inner')\n",
+        "joined_df.show()"
+      ],
+      "metadata": {
+        "id": "-RiWOHWESWh8",
+        "outputId": "99abe26c-de68-439f-c971-f4d73d86dd27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-----+------+----------+\n",
+            "|Department| Name|Salary|  Location|\n",
+            "+----------+-----+------+----------+\n",
+            "|   Finance| Jane|  4000|Building B|\n",
+            "|   Finance|Alice|  3800|Building B|\n",
+            "|        IT|  Bob|  4500|Building C|\n",
+            "|     Sales| John|  3000|Building A|\n",
+            "|     Sales| Mike|  3500|Building A|\n",
+            "+----------+-----+------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Left join\n",
+        "left_joined_df = df.join(dept_df, on='Department', how='left')\n",
+        "left_joined_df.show()"
+      ],
+      "metadata": {
+        "id": "HTot-BsUS2mB",
+        "outputId": "2e5678b1-d383-4fa4-b4b2-f8ae3789d77f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-----+------+----------+\n",
+            "|Department| Name|Salary|  Location|\n",
+            "+----------+-----+------+----------+\n",
+            "|     Sales| John|  3000|Building A|\n",
+            "|   Finance| Jane|  4000|Building B|\n",
+            "|     Sales| Mike|  3500|Building A|\n",
+            "|   Finance|Alice|  3800|Building B|\n",
+            "|        IT|  Bob|  4500|Building C|\n",
+            "+----------+-----+------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Employee DataFrame\n",
+        "emp_data = [\n",
+        "    (1, \"John\", \"Sales\", 3000),\n",
+        "    (2, \"Jane\", \"Finance\", 4000),\n",
+        "    (3, \"Mike\", \"Sales\", 3500),\n",
+        "    (4, \"Alice\", \"HR\", 3800),\n",
+        "    (5, \"Bob\", \"IT\", 4500),\n",
+        "    (6, \"Sam\", \"Support\", 3200)\n",
+        "]\n",
+        "emp_cols = [\"EmpID\", \"Name\", \"Department\", \"Salary\"]\n",
+        "emp_df = spark.createDataFrame(emp_data, emp_cols)\n",
+        "\n",
+        "# Department DataFrame\n",
+        "dept_data = [\n",
+        "    (\"Sales\", \"Building A\"),\n",
+        "    (\"Finance\", \"Building B\"),\n",
+        "    (\"IT\", \"Building C\"),\n",
+        "    (\"Admin\", \"Building D\")\n",
+        "]\n",
+        "dept_cols = [\"Department\", \"Location\"]\n",
+        "dept_df = spark.createDataFrame(dept_data, dept_cols)\n",
+        "\n",
+        "# Display both\n",
+        "emp_df.show()\n",
+        "dept_df.show()"
+      ],
+      "metadata": {
+        "id": "A1sKDar7VYSH",
+        "outputId": "5f3f8d15-2676-40db-877e-c7f9b685a00b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+-----+----------+------+\n",
+            "|EmpID| Name|Department|Salary|\n",
+            "+-----+-----+----------+------+\n",
+            "|    1| John|     Sales|  3000|\n",
+            "|    2| Jane|   Finance|  4000|\n",
+            "|    3| Mike|     Sales|  3500|\n",
+            "|    4|Alice|        HR|  3800|\n",
+            "|    5|  Bob|        IT|  4500|\n",
+            "|    6|  Sam|   Support|  3200|\n",
+            "+-----+-----+----------+------+\n",
+            "\n",
+            "+----------+----------+\n",
+            "|Department|  Location|\n",
+            "+----------+----------+\n",
+            "|     Sales|Building A|\n",
+            "|   Finance|Building B|\n",
+            "|        IT|Building C|\n",
+            "|     Admin|Building D|\n",
+            "+----------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Full outer join\n",
+        "full_df = emp_df.join(dept_df, on='Department', how='full')\n",
+        "full_df.show()"
+      ],
+      "metadata": {
+        "id": "ChktBUK9Vvdn",
+        "outputId": "37c5071b-4e18-4486-a514-6674e31692bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-----+-----+------+----------+\n",
+            "|Department|EmpID| Name|Salary|  Location|\n",
+            "+----------+-----+-----+------+----------+\n",
+            "|     Admin| NULL| NULL|  NULL|Building D|\n",
+            "|   Finance|    2| Jane|  4000|Building B|\n",
+            "|        HR|    4|Alice|  3800|      NULL|\n",
+            "|        IT|    5|  Bob|  4500|Building C|\n",
+            "|     Sales|    1| John|  3000|Building A|\n",
+            "|     Sales|    3| Mike|  3500|Building A|\n",
+            "|   Support|    6|  Sam|  3200|      NULL|\n",
+            "+----------+-----+-----+------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-w6uEMzXWmCE"
       },
       "execution_count": null,
       "outputs": []
